--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "mysql"]
 	path = mysql
 	url = https://github.com/opscode-cookbooks/mysql.git
+[submodule "composer"]
+	path = composer
+	url = https://github.com/zircote/chef-composer.git
